--- a/VintedProject/src/app/Components/Components/Cards/product-card/product-card.component.css
+++ b/VintedProject/src/app/Components/Components/Cards/product-card/product-card.component.css
@@ -144,6 +144,7 @@ img {
 .offer-item {
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: 5px;
+  width: fit-content;
   padding: 8px;
   margin-bottom: 10px; /* Aggiunge uno spazio tra le offerte */
 }
