--- a/VintedProject/src/app/Components/Components/Cards/product-card/product-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/product-card/product-card.component.html
@@ -32,9 +32,14 @@
         <div *ngIf="(i + 1) % 3 === 0 || i === offers.length - 1" class="clearfix"></div>
       </div>
     </div>
+
+    <!-- Show message if there are no offers -->
+    <p *ngIf="offers && offers.length === 0" style="color: black">Non ci sono ancora offerte per questo prodotto.</p>
+
     <h3 style="color: black">Prezzo originale: {{item?.price}}€</h3>
     <button class="btn" (click)="closeOfferModal($event)">Annulla</button>
     <h4 style="color: red">Attenzione, accettando un'offerta le altre verranno rifiutate automaticamente.</h4>
   </div>
 </div>
+
 
