--- a/VintedProject/src/app/Components/Components/bottom-of-the-barrel/bottom-of-the-barrel.component.css
+++ b/VintedProject/src/app/Components/Components/bottom-of-the-barrel/bottom-of-the-barrel.component.css
@@ -5,7 +5,7 @@
   width: 100%;
 }
 .footer {
-  background-color: lightblue;
+  background-color: #4aba91;
   padding: 20px 0;
 
   text-align: center;
