--- a/VintedProject/src/app/Components/Components/main-nav/main-nav.component.html
+++ b/VintedProject/src/app/Components/Components/main-nav/main-nav.component.html
@@ -1,12 +1,10 @@
 <div class="mainDiv">
   <span class="spacer"></span>
-  <div class="titleDiv" style="margin-right: 15px; min-width: 200px">
-
-    <p routerLink="" style="cursor:pointer; margin-top: 10px; margin-right: 10px; margin-left: 10px;">OCARINA SHOP</p>
-
+  <div class="titleDiv" style="margin-right: 15px; min-width: 250px">
+    <img routerLink="" src="../../../../assets/resources/ocarina-shop-logo.png" style="width: 240px; margin: 2px; cursor: pointer">
   </div>
   <span class="spacer"></span>
-      <div style="background-color: #c3d0cd; width: 100%; display: flex; flex-wrap: wrap;">
+      <div style="background-color: transparent; width: 100%; display: flex; flex-wrap: wrap;">
         <div style="margin-top: 8px; margin-left: 10px; margin-right: 10px"> <!-- div della ricerca categorie -->
           <div id="hormenu"><!-- div che contiene il menu -->
             <ul> <!-- lista principale: definisce il menu nella sua interezza -->
@@ -25,7 +23,7 @@
           </div>
         </div>
 
-        <mat-form-field style="margin-top:8px; margin-right: 10px; flex-grow: 1; width: 50%;">
+        <mat-form-field style="margin-top:8px; margin-right: 10px; flex-grow: 1; width: 50%; color: #0d9263">
           <input #searchkeyword matInput name="Ricerca" id="searchKey" placeholder="Ricerca prodotto" (keyup)="redirectToSearch(searchkeyword.value)">
           <button mat-button matSuffix (click)="redirectToSearch(searchkeyword.value)">
 
@@ -38,12 +36,12 @@
       <span class="spacer"></span>
   <span style="margin-top: 15px" *ngIf="logStringResult !== 'Login'">{{ logStringResult }}</span>
   <div style="display: flex; height: auto;"> <!--div bottoni iscrizione/accesso e inserisci inserzione-->
-    <button mat-raised-button style="background-color: lightblue; margin-top: 8px; margin-left: 10px; margin-right: 10px" [routerLink]="['/myprofile']" *ngIf="getUserString() !== 'Login'">Profilo</button>
-    <button mat-raised-button style="background-color: lightblue; margin-top: 8px; margin-left: 10px; margin-right: 10px" [routerLink]="['/chat']" *ngIf="getUserString() !== 'Login'">Messaggi</button>
-    <button mat-raised-button style="background-color: lightblue; margin-top: 8px; margin-left: 10px; margin-right: 10px" (click)="logout()" *ngIf="getUserString() !== 'Login'">Esci</button>
-    <button mat-raised-button style="background-color: lightblue; margin-top: 8px; margin-left: 10px; margin-right: 10px" [routerLink]="['/login']" *ngIf="getUserString() === 'Login'">Iscriviti/Accedi</button>
+    <button mat-raised-button style="background-color: #0d9263; margin-top: 8px; margin-left: 10px; margin-right: 10px" [routerLink]="['/myprofile']" *ngIf="getUserString() !== 'Login'">Profilo</button>
+    <button mat-raised-button style="background-color: #0d9263; margin-top: 8px; margin-left: 10px; margin-right: 10px" [routerLink]="['/chat']" *ngIf="getUserString() !== 'Login'">Messaggi</button>
+    <button mat-raised-button style="background-color: #0d9263; margin-top: 8px; margin-left: 10px; margin-right: 10px" (click)="logout()" *ngIf="getUserString() !== 'Login'">Esci</button>
+    <button mat-raised-button style="background-color: #0d9263; margin-top: 8px; margin-left: 10px; margin-right: 10px" [routerLink]="['/login']" *ngIf="getUserString() === 'Login'">Iscriviti/Accedi</button>
     <span style="flex: 1 1 auto;"></span>
-    <button mat-raised-button style="background-color: rgb(116, 116, 247); margin-top: 8px; margin-left: 10px; margin-right: 10px" [routerLink]="['/newinsertion']">Crea inserzione</button>
+    <button mat-raised-button style="background-color: #4aba91; margin-top: 8px; margin-left: 10px; margin-right: 10px" [routerLink]="['/newinsertion']">Crea inserzione</button>
     <span style="flex: 1 1 auto;"></span>
     <mat-icon style="margin-top: 10px; margin-right: 20px">help</mat-icon>
   </div>
