--- a/VintedProject/src/app/Components/home-page/home-page.component.css
+++ b/VintedProject/src/app/Components/home-page/home-page.component.css
@@ -74,7 +74,7 @@
 }
 
 .showAll-button {
-  background-color: lightblue;
+  background-color: #4aba91;
   border: none;
   color: white;
   padding: 10px 20px;
