--- a/VintedProject/src/app/Components/Pages/cart/cart.component.html
+++ b/VintedProject/src/app/Components/Pages/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class="insertion-container" style="margin: 5%" *ngIf="cartProduct!.length>0">
+<div class="insertion-container" style="margin: 5%" *ngIf="areProduct">
   <div class="card-container">
     <div class="card-row">
       <ng-container *ngFor="let item of cartProduct; let i = index;">
