--- a/VintedProject/src/app/Components/Pages/User/myprofile/myprofile.component.html
+++ b/VintedProject/src/app/Components/Pages/User/myprofile/myprofile.component.html
@@ -38,24 +38,20 @@
         </div>
 
       <div class="body-content" style="margin-top: 30px">
-        <div style="max-height: 700px;">
-          <div class="header">
-            <h2 class="font">Le mie Offerte</h2>
-            <button class="showAll-button" [routerLink]="['/catalog']">Vedi tutti</button>
-          </div>
-          <div class="card-container">
-            <div class="card-row" >
-              <ng-container *ngFor="let item of myOffer; let i = index;">
-                <app-offer-profile-card [item]="item.id"  class="card-item"></app-offer-profile-card>
-                <ng-container *ngIf="(i + 1) % 5 === 0" class="card-item"></ng-container>
-              </ng-container>
-            </div>
+        <div class="card-container">
+          <div class="card-row">
+            <ng-container *ngFor="let item of myOffer; let i = index;">
+              <app-offer-profile-card [offer]="item"  class="card-item"></app-offer-profile-card>
+              <ng-container *ngIf="(i + 1) % 5 === 0" class="clearfix"></ng-container>
+            </ng-container>
           </div>
         </div>
       </div>
+    </div>
 
 
-    <div class="body-content" style="margin-top: 30px">
+
+  <div class="body-content" style="margin-top: 30px">
       <div style="max-height: 700px;">
         <div class="header">
           <h2 class="font">I mie ordini</h2>
@@ -73,6 +69,6 @@
     </div>
 
 
-    </div>
+
 </div>
 
