--- a/VintedProject/src/app/Components/Components/Cards/order-card/order-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/order-card/order-card.component.html
@@ -1,6 +1,6 @@
 <div>
   <div>
-    <img style=" max-height: 180px;" src="assets/resources/vestito.jpg" (click)="onImageClick()" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
+    <img style=" max-height: 180px;" src="assets/resources/Order.png" (click)="onImageClick()" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
   </div>
   <div style="padding-left: 2%;">
     <div class="product-card">
