--- a/VintedProject/src/app/Components/Pages/User/login/login.component.html
+++ b/VintedProject/src/app/Components/Pages/User/login/login.component.html
@@ -19,13 +19,13 @@
       <form id="registration" style="display: flex;">
         <div id="secondColumn">
           <label style="margin: 0 25%;margin-top: 3%;">Nickname:</label>
-          <input type="email" style="margin: 0 25%; width: 50%;" [(ngModel)]="newUser.nickName" name="registerNick" maxlength="15">
+          <input type="email" style="margin: 0 25%; width: 50%;" [(ngModel)]="newUser.nickname" name="registerNick" maxlength="15">
 
           <label style="margin: 0 25%;margin-top: 5%;">Nome:</label>
-          <input type="email" style="margin: 0 25%; width: 50%;" [(ngModel)]="newUser.firstName" name="registerName" maxlength="12">
+          <input type="email" style="margin: 0 25%; width: 50%;" [(ngModel)]="newUser.firstname" name="registerName" maxlength="12">
 
           <label style="margin: 0 25%;margin-top: 5%;">Cognome:</label>
-          <input type="email" style="margin: 0 25%; width: 50%;" [(ngModel)]="newUser.lastName" name="registerSur" maxlength="12">
+          <input type="email" style="margin: 0 25%; width: 50%;" [(ngModel)]="newUser.lastname" name="registerSur" maxlength="12">
 
           <label style="margin: 0 25%;margin-top: 5%;">Email:</label>
           <input type="email" style="margin: 0 25%; width: 50%;" [(ngModel)]="newUser.email" name="registerMail" maxlength="20">
