--- a/VintedProject/src/app/Components/Components/Cards/product-card/product-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/product-card/product-card.component.html
@@ -25,7 +25,7 @@
             <p style="color: black">Prezzo offerto: {{offer.price}}€</p>
             <div class="offer-buttons">
               <button class="btn" (click)="acceptOffer()" >ACCETTA</button>
-              <button class="btn" (click)="deleteOffer(offer.id)">RIFIUTA</button>
+              <button class="btn" (click)="deleteOffer(i)">RIFIUTA</button>
             </div>
           </div>
         </div>
