--- a/VintedProject/src/app/Components/Pages/User/myprofile/myprofile.component.css
+++ b/VintedProject/src/app/Components/Pages/User/myprofile/myprofile.component.css
@@ -88,6 +88,16 @@
   min-height: 450px;
 }
 
+.content {
+  margin: auto;
+  width: 70%;
+  padding: 10px;
+  position: relative;
+  min-height: 450px;
+  background-color: white;
+}
+
+
 
 .header {
   display: flex;
@@ -167,4 +177,95 @@
   border-radius: 4px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   z-index: 9999;
+}
+
+
+.modal{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 9999;
+  left: 25%;
+  top: 20%;
+  height: 50%;
+  width: 50%;
+  border: 1px;
+  border-color: red;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255);
+  color: white;
+}
+
+
+.modal img {
+  max-width: 80%;
+  max-height: 80%;
+}
+
+.modal .close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.modal::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: -1;
+}
+
+.insertion-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 9999;
+  left: 0%;
+  top: 0%;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0,0.9);
+
+}
+
+.offer-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 9999;
+  left: 0%;
+  top: 0%;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0,0.9);
+  color: white;
+}
+
+.order-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 9999;
+  left: 0%;
+  top: 0%;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0,0.9);
+  color: white;
 }
