molte cose non mi ricordo

--- a/VintedProject/src/app/Components/Components/Cards/order-card/order-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/order-card/order-card.component.html
@@ -6,7 +6,7 @@
     <div class="product-card">
       <!-- Visualizza i dettagli del prodotto -->
       <h2>{{ item?.date}}</h2>
-      <p style="max-width: 250px">totale: </p>
+      <p style="max-width: 250px">totale: {{ item?.total}}€</p>
     </div>
   </div>
 </div>
