--- a/VintedProject/src/app/Components/Components/Cards/product-card/product-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<div class="product-card">
+<div class="product-card isPrivate">
   <div class="image-container">
     <img class="rounded-image" [src]="imageName" (click)="onImageClick()" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
 
