--- a/VintedProject/src/app/Components/Components/Cards/profile-card/profile-card.component.html
+++ b/VintedProject/src/app/Components/Components/Cards/profile-card/profile-card.component.html
@@ -1,7 +1,11 @@
 <div class="profile-card">
   <div class="profile-info">
     <img class="rounded-image" [src]="user?.imageName ? 'https://localhost:8010/vintedProject-api/v1/images/' + user?.imageName : 'assets/resources/vestito.jpg'" (click)="onImageClick()" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false" alt="Profile">
-    <div class="name">{{ user?.firstName }}</div>
+    <div style="display: flex">
+      <div class="name">{{ user?.firstName }}</div>
+      <div class="name" *ngIf="insertion?.isPrivate" style="margin-left: 180%; color: red">PRIVATA</div>
+    </div>
+
   </div>
   <app-product-card *ngIf="insertion" [item]="insertion"></app-product-card>
 </div>
