--- a/VintedProject/src/app/Components/Pages/Order/order.component.html
+++ b/VintedProject/src/app/Components/Pages/Order/order.component.html
@@ -1,4 +1,6 @@
-
+<ng-container *ngFor="let item of insertions.content let i = index;">
+  <app-cart-insertion-card [item]="item" class="card-item"></app-cart-insertion-card>
+</ng-container>
 <strong> Prodotti: </strong> {{ order!.insertionIdList}} <br>
 <strong>  Totale:  </strong> {{ order!.total}} <br>
 <strong>  Data:  </strong> {{order!.date}}<br>
